fix: favorites circle & mask phone

--- a/public/project/css/style.css
+++ b/public/project/css/style.css
@@ -1509,6 +1509,7 @@ body {
     font-size: 11px;
     width: 17px;
     height: 17px;
+    display: flex;
     justify-content: center;
     align-items: center;
 }
