--- a/public/project/css/style.css
+++ b/public/project/css/style.css
@@ -2650,6 +2650,7 @@ body.scroll_fixed {
   line-height: 32px;
   margin-right: 14px;
   font-weight: 700;
+    font-family: Source Sans Pro;
 }
 
 .place__currency {
@@ -2710,6 +2711,7 @@ body.scroll_fixed {
   font-size: 17px;
   line-height: 30px;
   transition: 0.2s;
+  font-family: Source Sans Pro;
 }
 
 .place__currency-item:hover {
@@ -2726,6 +2728,10 @@ body.scroll_fixed {
 .place__square {
   color: #c2c2c2;
   line-height: 32px;
+}
+
+.place__square div {
+    font-family: Source Sans Pro;
 }
 
 .place__buy {
