--- a/public/project/css/style.css
+++ b/public/project/css/style.css
@@ -116,7 +116,7 @@ body {
 
 #map_city {
   flex: 0 0 58.3%;
-  height: calc(100vh - 161px - 18px);
+  height: calc(100vh - 114px - 18px) !important;
 }
 
 #map_city .ymaps-2-1-79-map-copyrights-promo {
@@ -153,9 +153,9 @@ body {
 
 .city-col {
   overflow-y: auto;
-  height: calc(100vh - 161px - 18px);
+  height: calc(100vh - 114px - 18px);
   border-top: 1px solid #e3e9f6;
-  padding-top: 29px;
+  padding-top: 10px;
   display: none;
   position: relative;
 }
@@ -181,8 +181,8 @@ body {
 .city-col__subtitle {
   color: #c2c2c2;
   flex: 0 0 100%;
-  margin-top: 7px;
-  margin-bottom: 28px;
+  margin-top: 5px;
+  margin-bottom: 15px;
 }
 
 .city-col__filter {
@@ -275,7 +275,7 @@ body {
 }
 
 .city-col__content {
-  margin-top: 30px;
+  margin-top: 20px;
   padding-left: 20px;
   padding-right: 21px;
 }
@@ -1526,8 +1526,8 @@ body {
 }
 
 .header__nav {
-  padding-top: 40px;
-  padding-bottom: 33px;
+  padding-top: 15px;
+  padding-bottom: 15px;
   /* max-width: 1412px; */
   /* margin: 0 auto; */
   position: relative;
@@ -1899,6 +1899,7 @@ body {
   display: flex;
   margin-bottom: 30px;
 }
+
 
 .popular-locations__item-img {
   margin-right: 14px;
@@ -2587,12 +2588,12 @@ body.scroll_fixed {
 .place__left-collage {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  column-gap: 10px;
 }
 
 .place__collage-item {
   margin-bottom: 10px;
-  flex: 0 0 49.3%;
+  flex: calc(50% - 5px)
 }
 
 .place__collage-item img {
@@ -2644,9 +2645,9 @@ body.scroll_fixed {
 }
 
 .place__top-favorites-logo svg .str0 {
-  stroke: #508cfa;
+  /* stroke: #508cfa;
   stroke-width: 0.15;
-  stroke-miterlimit: 22.9256;
+  stroke-miterlimit: 22.9256; */
 }
 
 .place__top-favorites-logo svg .fil0 {
@@ -4233,7 +4234,7 @@ body.scroll_fixed {
 }
 @media (max-width: 1023px) {
   .place__left-col {
-    height: calc(100vh - 152px);
+    height: calc(100vh - 138px);
     overflow: auto;
   }
 }
@@ -4323,12 +4324,12 @@ body.scroll_fixed {
 
   .city-col {
     max-width: 418px;
-    padding-top: 36px;
+    padding-top: 20px;
   }
 
   .city-col__subtitle {
-    margin-top: 14px;
-    margin-bottom: 39px;
+    margin-top: 13px;
+    margin-bottom: 15px;
   }
 
   .city-col__content {
@@ -4407,11 +4408,11 @@ body.scroll_fixed {
 
 @media (max-width: 1199px) {
   #map_city {
-    height: calc(100vh - 88px - 60px);
+    height: calc(100vh - 72px - 60px) !important;
   }
 
   .city-col {
-    height: calc(100vh - 88px - 60px);
+    height: calc(100vh - 72px - 60px);
   }
 
   .realty {
@@ -4466,7 +4467,8 @@ body.scroll_fixed {
   }
 
   .header_1200 .header__top {
-    padding: 24px 20px 26px;
+    /* padding: 24px 20px 26px; */
+    padding: 15px 20px 15px;
   }
 
   .popular-locations {
@@ -4597,7 +4599,7 @@ body.scroll_fixed {
   }
 
   .place-w {
-    top: 84px;
+    top: 72px;
   }
 
   .place-w::before {
@@ -5151,7 +5153,7 @@ body.scroll_fixed {
 
   .place-w {
     overflow-y: auto;
-    height: calc(100vh - 84px);
+    height: calc(100vh - 72px);
   }
 
   .object__rooms {
@@ -5527,7 +5529,7 @@ body.scroll_fixed {
   }
 
   .header_1200 .header__top {
-    padding: 20px 20px 20px;
+    padding: 15px 20px 15px;
   }
 
   .header_1200 .header__top-logo {
@@ -5789,11 +5791,11 @@ body.scroll_fixed {
   }
 
   .place-w {
-    height: calc(100vh - 65px);
+    height: calc(100vh - 61px);
   }
 
   .place-w {
-    top: 68px;
+    top: 61px;
   }
 
   .place__btns {
@@ -5955,7 +5957,7 @@ body.scroll_fixed {
   }
 
   .place-w {
-    top: 66px;
+    top: 61px;
   }
 
   .object__id {
@@ -6236,7 +6238,7 @@ body.scroll_fixed {
   display: flex;
   /* justify-content: space-between; */
   flex-wrap: wrap;
-  gap: 20px;
+  column-gap: 20px;
 
 }
 
@@ -6709,7 +6711,7 @@ body.scroll_fixed {
 
 .header__nav-action {
   display: flex;
-  gap: 30px;
+  gap: 50px;
   align-items: center;
 }
 
@@ -6804,4 +6806,66 @@ body.scroll_fixed {
 }
 [data-phone-pattern] {
   background: transparent;
+}
+
+
+.check-favorites .white {
+  fill: none;
+}
+
+.check-favorites .white path{
+  stroke: #508cfa;
+  stroke-width: 0.15;
+  stroke-miterlimit: 22.9256;
+}
+.check-favorites.active .white {
+  fill: #508cfa;
+}
+
+
+
+
+
+.check-favorites .blue {
+  fill: none;
+}
+
+.check-favorites .blue path{
+  stroke: #ffffff;
+  stroke-width: 0.26;
+  stroke-miterlimit: 22.9256;
+}
+.check-favorites.active .blue {
+  fill: #194970;
+}
+
+
+
+
+
+.check-favorites .white-to-blue {
+  fill: none;
+}
+
+.check-favorites .white-to-blue path{
+  stroke: #508cfa;
+  stroke-width: 0.18;
+  stroke-miterlimit: 22.9256;
+}
+.check-favorites.active .white-to-blue {
+  fill: #508cfa;
+}
+
+@media (max-width: 767px) {
+  .check-favorites .white-to-blue {
+    fill: none;
+  }
+  
+  .check-favorites .white-to-blue path{
+    stroke: #fff;
+  }
+  .check-favorites.active .white-to-blue {
+
+
+  }
 }
