--- a/public/project/css/style.css
+++ b/public/project/css/style.css
@@ -6901,3 +6901,9 @@ body.scroll_fixed {
 .kompleks__layout-price-meter span.active {
   display: block;
 }
+.balloon-city {
+  cursor: pointer;
+  background: #fff;
+  padding: 3px;
+  justify-content: space-between;
+}
