--- a/public/project/css/style.css
+++ b/public/project/css/style.css
@@ -6953,3 +6953,12 @@ body.scroll_fixed {
   display: block;
 }
 
+
+.zoom-control {
+  background: #fff;
+  border-radius: 8px;
+}
+
+.button._view_air {
+  background: #fff;
+}
