feat: map change positon zoom btns

--- a/public/project/css/style.css
+++ b/public/project/css/style.css
@@ -6962,3 +6962,7 @@ body.scroll_fixed {
 .button._view_air {
   background: #fff;
 }
+
+.ymaps-2-1-79-controls__control {
+  /* inset: auto 10px 108px auto !important; */
+}
