--- a/public/project/css/style.css
+++ b/public/project/css/style.css
@@ -5341,7 +5341,8 @@ body.scroll_fixed {
   }
 
   .city__content.city_map {
-    height: calc(100vh - 128px);
+    height: calc(100vh - 134px);
+    overflow: hidden;
   }
 
   .city-col {
