--- a/public/project/css/style.css
+++ b/public/project/css/style.css
@@ -6962,6 +6962,7 @@ body.scroll_fixed {
   background: #fff;
   border-radius: 8px;
   padding: 3px;
+  box-shadow: 0px 0px 10px rgb(0, 0, 0, 0.5);
 }
 
 .ymaps-2-1-79-controls__control {
