--- a/public/lands/css/style.css
+++ b/public/lands/css/style.css
@@ -208,11 +208,9 @@ main {
 input {
   width: 100%;
   background: transparent;
-  color: #a2a2a2;
-  font-size: 16px;
-  border-radius: 30px;
-  border: 1px solid #c4c4c4;
-  padding: 10px 17px;
+  color: #646363;
+  font-size: 13px;
+  font-weight: 400;
 }
 
 ul.list_point {
@@ -3805,7 +3803,6 @@ ul.list_point li {
 }
 
 .preview__form input {
-  margin-bottom: 10px;
 }
 
 .preview__form-title {
@@ -5086,4 +5083,334 @@ ul.list_point li {
   .building__item-swiper i {
     display: none;
   }
+}
+
+.input-wrapper {
+  border-radius: 30px;
+  padding: 13px 17px 7px 21px;
+  position: relative;
+  display: block;
+  margin-bottom: 10px;
+  border: 1px solid #797777;
+}
+
+.input-wrapper input::placeholder {
+  color: transparent;
+}
+
+.input-wrapper.active {
+  border: 1px solid red;
+}
+
+.input-wrapper.border {
+  border: 1px solid red;
+}
+
+.input-wrapper.active .text {
+  top: 20%;
+  font-size: 10px;
+  font-size: 12px;
+}
+
+.input-wrapper .text {
+  position: absolute;
+  top: 50%;
+  left: 20px;
+  transform: translate(0,-50%);
+  transition: .3s;
+  font-size: 14px;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  background: transparent !important;
+  color: #9f9f9f !important;
+  pointer-events: none;
+}
+
+.input-wrapper input {
+  transition: .2s;
+}
+
+.popup input {
+
+}
+.popup input {
+  background: transparent;
+  width: 100%;
+}
+
+.input-wrapper.active.confirm {
+  background: #ecf1f7;
+  border: 1px solid transparent;
+}
+
+.input-wrapper.active.confirm::after {
+  content: "";
+  position: absolute;
+  right: 10px;
+  top: 50%;
+  transform: translate(0,-50%);
+  background: url(../img/icons/confirm-svgrepo.svg) 0 0 no-repeat;
+  background-size: cover;
+  width: 15px;
+  height: 15px;
+}
+
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+}
+
+input[type='number'] {
+  -moz-appearance: textfield;
+}
+
+.layouts__btn {
+    width: 40px;
+    height: 40px;
+    background: #fff;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 3;
+    position: absolute;
+    top: 50%;
+    cursor: pointer;
+    opacity: 1;
+    transform: translate(0, -50%) rotate(180deg);
+    left: 0;
+    border: 1px solid #dbd3d3;
+}
+
+.layouts__btn svg{
+    width: 18px;
+    height: 18px;
+}
+
+.layouts__btn svg path {
+  fill: #a3a3a3;
+}
+
+.layouts__next {
+  right: 0;
+  left: auto;
+  transform: translate(0, -50%) rotate(0deg);
+
+}
+.layouts__swiper-w {
+  padding: 0 50px;
+  position: relative;
+}
+
+@media (max-width: 539px) {
+  .layouts__swiper-w {
+    padding: 0 30px;
+  }
+  .layouts__btn {
+    width: 26px;
+    height: 26px;
+}
+
+.layouts__btn svg{
+    width: 15px;
+    height: 15px;
+}
+}
+
+.popup__content {
+}
+
+.popup__house-pic img {
+  width: 100%;
+}
+
+
+
+.popup__house-pic  {
+  margin-bottom: 10px;
+}
+
+.popup-house .popup__content{
+  max-width: 700px;
+  background: #fff;
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+
+
+.popup__house-price {
+  color: #000;
+  font-size: 20px;
+  margin-bottom: 20px;
+}
+
+.popup__house-lead {
+  color: #000;
+}
+
+.popup-house .preview__form {
+  border-radius: 0px;
+  padding: 0px;
+}
+
+@media (max-width: 767px) {
+  .popup-house .popup__content {
+    flex-wrap: wrap;
+  }
+  .popup-house .preview__form {
+    margin: 0 auto;
+    flex: 0 0 100%;
+  }
+  
+  .popup__house-pic  {
+    max-width: 300px;
+    margin: 0 auto 20px;
+  }
+
+  .popup__house-info {
+    margin: 0 auto;
+  }
+}
+
+.popup-gallery .popup__content {
+  max-width: 1000px;
+  background: none;
+  padding: 0px;
+  width: 100%;
+  height: 100%;
+
+}
+
+.popup-gallery .popup__body {
+  padding: 30px 0px;
+  height: 100%;
+}
+
+.popup__slide img {
+  width: 100%;
+}
+
+.popup__swiper-pagination {
+    position: absolute;
+    z-index: 100;
+    font-weight: 700;
+    color: #ffffff;
+    border-radius: 5px;
+    background: rgba(0, 0, 0, 0.7);
+    padding: 8px 22px;
+    text-align: center;
+    left: 50%;
+    right: auto;
+    transform: translate(-50%, 0);
+    width: auto;
+    max-height: 35px;
+    bottom: 10px;
+}
+
+.popup__nav-btn {
+  position: absolute;
+  top: 50%;
+  transform: translate(0, -50%) rotate(180deg);
+  cursor: pointer;
+  border: 1px solid #605959;
+  padding: 5px;
+  background-color: rgb(51, 51, 51);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 35px;
+  height: 46px;
+  left: 30px;
+  z-index: 105;
+}
+
+.popup__next {
+  left: auto;
+  right: 30px;
+  transform: translate(0, -50%) rotate(0deg);
+}
+
+.popup__nav-btn svg {
+  width: 24px;
+  height: 35px;
+  transition: 0.2s;
+  stroke: rgb(121, 113, 113);
+  fill: rgb(121, 113, 113);
+
+}
+
+.popup__nav-btn svg {
+}
+
+.popup-gallery::before {
+  opacity: 0.9;
+}
+
+.popup-gallery .popup-close svg {
+  width: 30px;
+  height: 30px;
+  z-index: 2;
+}
+.popup-gallery .popup-close svg path{
+  stroke: #fff;
+}
+
+.popup-gallery .popup-close  {
+}
+
+
+
+@media (max-width: 539px) {
+  .popup__swiper-wrapper {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+  }
+
+  .popup-gallery .popup__body {
+    padding: 0px;
+  }
+  
+  .popup-gallery .popup__content {
+    background: #fff;
+    padding: 0px;
+    width: 100%;
+  }
+
+  .popup__nav-btn {
+    display: none;
+  }
+
+  .popup-gallery .popup-close::after {
+      content: "";
+      background: rgba(0, 0, 0, 0.5);
+      width: 100%;
+      height: 100%;
+      left: 0;
+      top: 0;
+      position: absolute;
+  }
+
+  .popup-gallery .popup-close {
+    width: 32px;
+    height: 32px;
+  }
+}
+
+
+
+.popup__swiper {
+  height: 100%;
+}
+
+.popup__slide img {
+    width: 100%;
+    max-width: 962px;
+    object-fit: cover;
+    height: 100%;
 }
