--- a/public/lands/css/style.css
+++ b/public/lands/css/style.css
@@ -2360,6 +2360,12 @@ ul.list_point li {
   padding-top: 80px;
 }
 
+@media (max-width: 1023px) {
+  .map {
+    height: 300px;
+  }
+}
+
 .map iframe {
   height: 100%;
   width: 100%;
@@ -5238,16 +5244,17 @@ input[type='number'] {
   max-width: 723px;
   background: #fff;
   display: flex;
-  align-items: center;
-  gap: 50px;
-  justify-content: space-between;
+  column-gap: 50px;
+  row-gap: 10px;
+  justify-content: center;
+  padding: 30px 15px;
 }
 
 
 .popup__house-price {
   color: #000;
   font-size: 20px;
-  margin-bottom: 20px;
+  margin-bottom: 4px;
 }
 
 .popup__house-lead {
@@ -5257,9 +5264,12 @@ input[type='number'] {
 .popup-house .preview__form {
   border-radius: 0px;
   padding: 0px;
+  flex: 0 0 250px;
 }
 .popup__house-info {
   flex: 0 0 320px;
+  background: #f6f6f6;
+  padding: 10px;
 }
 @media (max-width: 767px) {
   .popup-house .popup__content {
@@ -5267,20 +5277,26 @@ input[type='number'] {
   }
   .popup-house .preview__form {
     margin: 0 auto;
-    flex: 0 0 257px;
+    flex: 0 0 340px;
   }
   
   .popup__house-pic  {
-    max-width: 300px;
-    margin: 0 auto 20px;
+    margin: 0 auto 8px;
   }
 
   .popup__house-info {
     margin: 0 auto;
-    flex: 0 0 257px;
+    flex: 0 0 340px;
   }
 }
-
+@media (max-width: 405px) {
+  .popup-house .preview__form {
+    flex: 0 0 100%;
+  }
+  .popup__house-info {
+    flex: 0 0 100%;
+  }
+}
 .popup-gallery .popup__content {
   max-width: 1000px;
   background: none;
@@ -5356,8 +5372,8 @@ input[type='number'] {
 }
 
 .popup-gallery .popup-close svg {
-  width: 30px;
-  height: 30px;
+  width: 26px;
+  height: 26px;
   z-index: 2;
 }
 .popup-gallery .popup-close svg path{
@@ -5421,36 +5437,51 @@ input[type='number'] {
     height: 100%;
 }
 .popup-building .building__item{
-  max-width: 323px;
   width: 100%;
 }
 .popup-building .popup__content{
   max-width: 723px;
   background: #fff;
   display: flex;
-  align-items: center;
-  column-gap: 50px;
+  column-gap: 30px;
   row-gap: 20px;
-  justify-content: space-between;
+  justify-content: center;
   flex-wrap: wrap;
+  padding: 30px 15px;
 
 }
 .popup-building .preview__form {
-  flex: 0 0 320px;
+  flex: 0 0 250px;
   padding: 0px;
 }
+
+.popup-building .popup__building-info{
+  max-width: 50%;
+}
+
+
 
 @media (max-width: 767px) {
   .popup-building .popup__building-info{
     margin: 0 auto;
+    width: 100%;
+    max-width: 406px;
   }
+
+  .popup-building .building__item-lead{
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 15px;
+    justify-content: space-between;
+  }
+  
   .popup-building .preview__form {
-    flex: 0 0 257px;
+    flex: 0 0 100%;
     margin: 0 auto;
+    max-width: 406px;
   }
 
   .popup-building .building__item{
-    max-width: 257px;
     width: 100%;
   }
   .popup-building .building__item-info {
@@ -5492,3 +5523,14 @@ input[type='number'] {
     pointer-events: all !important;
   }
 }
+
+
+
+@media (max-width: 767px) {
+  .popup-building .popup-close {
+    top: 10px;
+    right: 15px;
+  }
+}
+
+
