--- a/public/lands/css/style.css
+++ b/public/lands/css/style.css
@@ -1829,6 +1829,13 @@ ul.list_point li {
   padding: 48px 38px 110px 60px;
 }
 
+.about__slide-text p {
+  color: #000000;
+  font-size: 14px;
+  font-weight: 300;
+  line-height: 22px;
+}
+
 .about__slide-title {
   color: #000000;
   font-size: 18px;
@@ -5493,7 +5500,6 @@ input[type='number'] {
 
 .wrapMap {
   position: relative;
-  cursor: help;
   overflow: hidden;
 }
 .mapTitle {
@@ -5516,11 +5522,11 @@ input[type='number'] {
     display: none !important;
   }
   .wrapMap {
-    pointer-events: none;
+    /* pointer-events: none; */
   }
 
   .wrapMap iframe {
-    pointer-events: all !important;
+    /* pointer-events: all !important; */
   }
 }
 
@@ -5532,5 +5538,59 @@ input[type='number'] {
     right: 15px;
   }
 }
+.myWrap {
+  position: relative;
+}
+
+@media (pointer: coarse) {
+  .map iframe {
+    position: absolute;
+    z-index: -1;
+  }
+  .myWrapClick {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 5;
+  }
+}
+
+.popup-map .popup__body {
+  padding: 0;
+  width: 100%;
+}
+
+.popup-map .popup__content {
+  max-width: none;
+  width: 100%;
+  border-radius: 0;
+  padding: 40px 0 0;
+}
+
+.popup-map .popup-close{
+  top: 10px;
+  right: 10px;
+}
+
+.popup-map {
+  height: 100vh;
+}
+
+.popup-map .popup__body{
+  height: 100%;
+}
+
+.popup-map .popup__content{
+  height: 100%;
+}
+
+.popup-map .popup-map__body{
+  height: 100%;
+}
 
 
+.popup-map iframe{
+  height: 99%;
+}
