feat: add filter gallery js functions

--- a/public/lands/css/style.css
+++ b/public/lands/css/style.css
@@ -5612,3 +5612,11 @@ input[type='number'] {
 .building__sort .sort__title {
   width: 100%;
 }
+
+.hidden-slide {
+  display: none !important;
+}
+
+.gallery__text {
+  color: #000;
+}
