--- a/public/admin/css/style.css
+++ b/public/admin/css/style.css
@@ -81,8 +81,8 @@
 .ixsButton2::before {
   content: '\2715';
   position: absolute;
-  top: -76px;
-  right: -155px;
+  top: 0;
+  right: 0;
   color: #f30c0c;
   font-size: large;
   color: red;
@@ -100,7 +100,7 @@
   display: flex;
   justify-content: center;
   margin: 20px 0;
-  gap: 20px;
+  gap: 50px 10px;
   flex-wrap: wrap;
 }
 #newDivqwe3{
@@ -10235,7 +10235,7 @@ input[type="button"].btn-block {
   flex-direction: column;
   align-items: flex-start;
   justify-content: center; }
-  
+
   .btn-group-vertical > .btn,
   .fc .btn-group-vertical > button,
   .ajax-upload-dragdrop .btn-group-vertical > .ajax-file-upload,
@@ -10582,7 +10582,7 @@ input[type="button"].btn-block {
   .asColorPicker-wrap > .custom-select:not(:first-child) {
     border-top-left-radius: 0;
     border-bottom-left-radius: 0; }
-  
+
   .input-group > .custom-file,
   .asColorPicker-wrap > .custom-file {
     display: flex;
@@ -15423,7 +15423,7 @@ a.text-dark:hover, a.text-dark:focus {
     border: 1px solid #000; }
   .table, .jsgrid .jsgrid-table {
     border-collapse: collapse !important; }
-    
+
     .table td,
     .jsgrid .jsgrid-table td, .table th, .jsgrid .jsgrid-table th {
       background-color: #ffffff !important; }
