--- a/public/project/css/style.css
+++ b/public/project/css/style.css
@@ -4717,6 +4717,7 @@ body.scroll_fixed {
     position: absolute;
     opacity: 0;
     pointer-events: none;
+    height: 100% !important;
   }
 
   #map_city.show {
