--- a/public/project/css/style.css
+++ b/public/project/css/style.css
@@ -4435,7 +4435,7 @@ body.scroll_fixed {
 
 @media (max-width: 1199px) {
   #map_city {
-    height: calc(100vh - 72px - 60px) !important;
+    /* height: calc(100vh - 72px - 60px) !important; */
   }
 
   .city-col {
@@ -4542,7 +4542,8 @@ body.scroll_fixed {
     flex: 0 0 14.6%;
   }
 }
-
+@media (max-width: 1003px) {
+}
 @media (max-width: 1150px) {
   .locations__item:nth-child(4n+4) {
     flex: 0 0 33%;
@@ -4717,7 +4718,6 @@ body.scroll_fixed {
     position: absolute;
     opacity: 0;
     pointer-events: none;
-    height: 100% !important;
   }
 
   #map_city.show {
